Adding encoding